# chastushki-research

./: .env.example  .gitignore  03_summary.md  README.md  docker-compose.yml  founder_memo_notes.md  prd_mvp_metrics.md
.github/workflows/: ci.yml
archive/: founder_memo_draft.md
backend/: Makefile  README.md  pyproject.toml
backend/app/: main.py  schemas.py
backend/app/api/: routes.py
backend/app/services/: pipeline.py
backend/chastushki_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api_contracts.py
docs/: 01_market_scan.md  02_technical_plan.md  03_summary.md  04_design_doc.md  05_prd_mvp.md  06_founder_memo.md  07_execution_playbook.md  README.md  product_experience.md  product_strategy.md
docs/archive/: prd_mvp_core.md
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/src/app/: page.tsx
frontend/src/components/: mvp-form.test.tsx  mvp-form.tsx  mvp-workspace.test.tsx  mvp-workspace.tsx
frontend/src/lib/: api.ts  types.ts
infra/: README.md
